more on events... new idea for hateoas
