# EventManager/app/infrastructure/http/Link.go
@@ -1,6 +1,0 @@
-package http
-
-type Link struct {
-	Href string `json:"href"`
-	Type string `json:"type"`
-}
